<?xml version="1.0"?>
<package format="3">
  <name>anello_ros_driver</name>
  <version>1.3.4</version>
  <description>The anello_ros_driver package</description>
  <maintainer email="austin.johnson@anellophotonics.com">Austin Johnson</maintainer>
  <license>MIT</license>
  <author email="austin.johnson@anellophotonics.com">Austin Johnson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rosidl_typesupport_c</depend>
  <depend>builtin_interfaces</depend>


  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>mavros_msgs</depend>
  <!-- Needs this to for the package to show up -->
  <export>                               
    <build_type>ament_cmake</build_type> 
  </export> 

</package>
