<?xml version="1.0"?>
<package format="3">
  <name>anello_ros_driver</name>
  <version>2.0.0</version>
  <description>The anello_ros_driver package</description>
  <maintainer email="austin.johnson@anellophotonics.com">Austin Johnson</maintainer>
  <license>MIT</license>
  <author email="austin.johnson@anellophotonics.com">Austin Johnson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nmea_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>anello_interfaces</depend>
  <!-- Needs this to for the package to show up -->
  <export>                               
    <build_type>ament_cmake</build_type> 
  </export> 

</package>
