<?xml version="1.0"?>
<package format="3">
  <name>ntrip_client</name>
  <version>2.0.1</version>
  <description>The ntrip client for the anello_ros_driver package</description>
  <maintainer email="austin.johnson@anellophotonics.com">Austin Johnson</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>mavros_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
